# helix-label

./: .gitignore  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeartifact-deploy.yml
label/: generic_energy_profile.py  label.py  populate_bayren_electrification_checklist.py  populate_beam_ann_arbor.py  populate_beam_ann_arbor_2030.py  populate_beam_cambridge.py  populate_beam_chicago.py  populate_beam_colorado.py  populate_beam_columbia.py  populate_beam_core.py  populate_beam_detroit.py  populate_beam_detroit_2030.py  populate_beam_fort_collins.py  populate_beam_grand_rapids.py  populate_beam_indianapolis.py  populate_beam_lexington.py  populate_beam_madison.py  populate_beam_milwaukee.py  populate_beam_minnesota.py  populate_beam_neea.py  populate_beam_new_jersey.py  populate_beam_new_orleans.py  populate_beam_nyc.py  populate_beam_oak_park.py  populate_beam_orlando.py  populate_beam_philadelphia.py  populate_beam_portland.py  populate_beam_profile.py  populate_beam_providence.py  populate_beam_reno.py  populate_beam_san_diego.py  populate_beam_south_portland.py  populate_beam_west_virginia.py  populate_energy_first_mortgage.py  populate_massachusetts_home_scorecard.py  populate_remotely_ipc.py  populate_residential_green_addendum.py  populate_vermont_energy_profile.py
label.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
label/utils/: constants.py  energy_star_score.csv  image_utils.py  utils.py
tests/: test_label.py
