[build-system]
requires = ["setuptools", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["label*"]

[project]
name = "helix-label"
version = "1.0.0"
description = "Green Label PDF Generator"
authors = [{name = "ClearlyEnergy", email = "info@clearlyenergy.com"}]
license = {text = "MIT"}
requires-python = ">=3.5"
readme = { file = "README.rst", content-type = "text/x-rst"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5"
]
dependencies = [
"boto3==1.26.142",
"botocore==1.29.142",
"docutils==0.17.1",
"jmespath==0.10.0",
"pdfrw==0.4",
"peppercorn==0.6",
"Pillow==10.0.0",
"python-dateutil==2.7.3",
"reportlab==4.0.5",
"s3transfer==0.6.2",
"six==1.16.0"
]

[project.optional-dependencies]
dev = [
    "check-manifest"
]
tests = [
    "coverage"
]

[project.urls]
Repository = "https://github.com/ClearlyEnergy/helix-label"